Tutorial section now uses <hx> tags instead of <div class="">.

--- a/tutorials/Draw_A_Paint_Brush/index.html
+++ b/tutorials/Draw_A_Paint_Brush/index.html
@@ -2,16 +2,16 @@
 <title>GIMP - Draw A Paint Brush</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Draw A Paint Brush</div>
+<h1>Draw A Paint Brush</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   So, we want to create a nice paintbrush image with the Gimp. This tutorial can be a bit complex and I think it is better for a bit more advanced gimper. 
   If you want to learn the basics, a good way to do so is to get one of the many Gimp books written. If I must pick one to recommend, I think it would be Grokking The Gimp, 
   it is pretty good. But I am sure many of the others are great too, check a few out at your bookstore! 
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="1.png" alt=""/>
 </p>
@@ -19,7 +19,7 @@
   Anyway, we start off with a plain gray image. 
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="2.png" alt=""/>
 </p>
@@ -27,7 +27,7 @@
   We first create a new transparent layer, and name it "tip" since we start drawing the brush from the brush tip. 
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="3.png" alt=""/>
 </p>
@@ -36,7 +36,7 @@
   so it might be helpful to check out my Bezier tool tutorials if you have trouble. 
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="4.png" alt=""/>
 </p>
@@ -44,7 +44,7 @@
   Just fill the selection with black color. 
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="5.png" alt=""/>
 </p>
@@ -53,7 +53,7 @@
   Try to think where the light comes from, and make the selection accordingly.
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="6.png" alt=""/>
 </p>
@@ -63,7 +63,7 @@
   The important thing here is to set the blend mode to "FG to Transparent", we only want to add white, not the black. 
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="7.png" alt=""/>
 </p>
@@ -71,7 +71,7 @@
   Make a blend from top to bottom, so that the white fades out towards the brush tip. 
 </p>
 
-<div class="subtitle">Step 8</div>
+<h2>Step 8</h2>
 <p class="images">
   <img src="8.png" alt=""/>
 </p>
@@ -80,7 +80,7 @@
   and add small "roundings" to the ends. Then fill the selection with a rather mid gray gradient. It does not look very real yet, but we want to bring this to life next...
 </p>
 
-<div class="subtitle">Step 9</div>
+<h2>Step 9</h2>
 <p class="images">
   <img src="9.png" alt=""/>
 </p>
@@ -93,7 +93,7 @@
   Again, think how the light would reflect and how the shadows would be on a real object. And dont worry if it does not look right at first, it needs some practice and patience. 
 </p>
 
-<div class="subtitle">Step 10</div>
+<h2>Step 10</h2>
 <p class="images">
   <img src="10.png" alt=""/>
 </p>
@@ -105,7 +105,7 @@
   Again, since the metal has a pretty shiny surface, you can use the Dodge/Burn tool to make the shadows and hilights stronger. Using brighness and contrast might help too. 
 </p>
 
-<div class="subtitle">Step 11</div>
+<h2>Step 11</h2>
 <p class="images">
   <img src="11.png" alt=""/>
 </p>
@@ -113,7 +113,7 @@
   We add the "engraving" by painting blackwith a very small brush, airbrush again works well. Try to make it look like some letter ornament or whatever you like.
 </p>
 
-<div class="subtitle">Step 12</div>
+<h2>Step 12</h2>
 <p class="images">
   <img src="12.png" alt=""/>
 </p>
@@ -121,7 +121,7 @@
   Add hilights with white color to the areas that would get reflection. Since the light comes from top left, the hilights go to bottom right of the black "engraved" shapes.
 </p>
 
-<div class="subtitle">Step 13</div>
+<h2>Step 13</h2>
 <p class="images">
   <img src="13.png" alt=""/>
 </p>
@@ -129,7 +129,7 @@
   Next we want to do the rest of the handle. We again create a new layer for it. Since it comes from "inside" the metal part, it is better to put it behind the metal part layers.
 </p>
 
-<div class="subtitle">Step 14</div>
+<h2>Step 14</h2>
 <p class="images">
   <img src="14.png" alt=""/>
 </p>
@@ -137,7 +137,7 @@
   Again, the bezier selection tool. Yes, I love it. You should too. Make a nice tapered shape that represents the brush handle.
 </p>
 
-<div class="subtitle">Step 15</div>
+<h2>Step 15</h2>
 <p class="images">
   <img src="15.png" alt=""/>
 </p>
@@ -146,7 +146,7 @@
   This will make the texture of the handle. Fill the selection with the wooden pattern. 
 </p>
 
-<div class="subtitle">Step 16</div>
+<h2>Step 16</h2>
 <p class="images">
   <img src="16.png" alt=""/>
 </p>
@@ -154,7 +154,7 @@
   Add another layer, this time for the hilight of the wood. Position it just above the handle layer. 
 </p>
 
-<div class="subtitle">Step 17</div>
+<h2>Step 17</h2>
 <p class="images">
   <img src="17.png" alt=""/>
 </p>
@@ -163,7 +163,7 @@
   Then do a hilight like you did for the brush tip on steps 5-7. You might want to reduce the fill opacity a bit since the wood is quite not as shiny as the wet brush tip. 
 </p>
 
-<div class="subtitle">Step 18</div>
+<h2>Step 18</h2>
 <p class="images">
   <img src="18.png" alt=""/>
 </p>
@@ -171,7 +171,7 @@
   Okay, it looks very much like a brush already... Lets just add a shadow and it looks better.
 </p>
 
-<div class="subtitle">Step 19</div>
+<h2>Step 19</h2>
 <p class="images">
   <img src="19.png" alt=""/>
 </p>
@@ -180,7 +180,7 @@
   We are going to make this copy into a drop shadow for the original brush.
 </p>
 
-<div class="subtitle">Step 20</div>
+<h2>Step 20</h2>
 <p class="images">
   <img src="20.png" alt=""/>
 </p>
@@ -188,7 +188,7 @@
   Turn on "Keep Trans" checkbox on the layers dialog, and select the whole image and fill it black with the bucket fill tool.
 </p>
 
-<div class="subtitle">Step 21</div>
+<h2>Step 21</h2>
 <p class="images">
   <img src="21.png" alt=""/>
 </p>
@@ -196,7 +196,7 @@
   Unselect the "keep trans" and blur the layer a fair bit, I think I used something like 20 for the radius.
 </p>
 
-<div class="subtitle">Step 22</div>
+<h2>Step 22</h2>
 <p class="images">
   <img src="22.png" alt=""/>
 </p>
@@ -205,7 +205,7 @@
   You need to click the "chain" button on the scale dialog to change the image's aspect ratio.
 </p>
 
-<div class="subtitle">Step 23</div>
+<h2>Step 23</h2>
 <p class="images">
   <img src="23.png" alt=""/>
 </p>
@@ -214,7 +214,7 @@
   The easiest way to copy a layer is to drag it from the layers dialog to an image.
 </p>
 
-<div class="subtitle">Step 24</div>
+<h2>Step 24</h2>
 <p class="images">
   <img src="24.png" alt=""/>
 </p>
@@ -222,7 +222,7 @@
   I wanted to erase some of the shadow of the handle so it looks more realistic. I just used the eraser tool with a big fuzzy brush.
 </p>
 
-<div class="subtitle">Step 25</div>
+<h2>Step 25</h2>
 <p class="images">
   <img src="25.png" alt=""/>
 </p>
