--- a/tutorials/Drawables/index.html
+++ b/tutorials/Drawables/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Working with the Image</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Working with the Image</div>
+<h1>Working with the Image</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   A plug-in is of limited use if it has nothing to do with the image. In this section, we explore the exciting world of the GIMP image hierarchy, and learn how to manipulate it.
 </p>
