--- a/tutorials/Drawing_Shapes/index.html
+++ b/tutorials/Drawing_Shapes/index.html
@@ -2,16 +2,16 @@
 <title>GIMP - Drawing Shapes with Bezier Tool</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Drawing Shapes with Bezier Tool</div>
+<h1>Drawing Shapes with Bezier Tool</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Bezier selection can be used in many creative ways. Maybe the best thing in it is the smooth, beautiful curves it produces. 
   But you can also use Bezier to create different polygonal shapes if you don't 'pull out the handles'. 
   Polygonal shapes are especially useful when painting some geometric objects, as you can draw one side at a time (into different layers if you want).
 </p>
 
-<div class="subtitle">Shapes with Bezier!?</div>
+<h2>Shapes with Bezier!?</h2>
 <p class="images">
   <img src="box.gif" alt=""/>
 </p>
@@ -27,13 +27,13 @@
   If you are new to Gimp I suggest you to go to the Gimp homepage in www.gimp.org and first read through the Documentation section there. 
 </p>
 
-<div class="subtitle">Let's get started!</div>
+<h2>Let's get started!</h2>
 <p>
   First we must create a new image for our creation. Make the size 256x256 pixels and choose RGB for the type. The image background should be white. 
   Open the Layers &amp; Channels -dialog with the right-button-menu: <span class="filter">&lt;Image&gt;Dialogs -&gt; Layers, Channels &amp; Paths...</span>
 </p>
 
-<div class="subtitle">1. Left side</div>
+<h2>1. Left side</h2>
 <p class="images">
   <img src="box_numb.gif" alt=""/>
 </p>
@@ -72,7 +72,7 @@
   (The light was coming from the left)
 </p>
 
-<div class="subtitle">2. Right side</div>
+<h2>2. Right side</h2>
 <p class="images">
   <img src="gradient2.gif" alt=""/>
 </p>
@@ -87,7 +87,7 @@
   It's better to overlap the lower layer a bit than leave a space between them. 
 </p>
 
-<div class="subtitle">3. Top side</div>
+<h2>3. Top side</h2>
 <p class="images">
   <img src="gradient3.gif" alt=""/>
 </p>
@@ -100,7 +100,7 @@
   you can flatten the image and our little tutorial-cube is finished. Now apply for your 'Cube Gimp Licence' from the nearest Gimp Station ;)
 </p>
 
-<div class="subtitle">4. Finished Work</div>
+<h2>4. Finished Work</h2>
 <p class="images">
   <img src="finished_image.gif" alt=""/>
 </p>
