--- a/tutorials/Golden_Text/index.html
+++ b/tutorials/Golden_Text/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Golden Text Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Golden Text Tutorial</div>
+<h1>Golden Text Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="title.gif" alt=""/>
 </p>
@@ -15,7 +15,7 @@
    Additionally it can map an enviroment-map to the image.
 </p>
 
-<div class="subtitle">Part I</div>
+<h2>Part I</h2>
 <p class="images">
   <img src="envmap_gold.jpg" alt=""/>
 </p>
@@ -53,7 +53,7 @@
   idea to render the image in the double size and scale it down for the final image. Some other neat tricks can be found in the next part.
 </p>
 
-<div class="subtitle">Part II</div>
+<h2>Part II</h2>
 <p class="images">
   <img src="curves1_small.gif" alt=""/>
   <img src="bumpmap1_small.gif" alt=""/>
@@ -86,7 +86,7 @@
   Another possibility is the use of a different gradient.
 </p>
 
-<div class="subtitle">Part III</div>
+<h2>Part III</h2>
 <p class="images">
   <img src="curves3_small.gif" alt=""/>
   <img src="bumpmap3_small.gif" alt=""/>
