--- a/tutorials/Image_Pipes/index.html
+++ b/tutorials/Image_Pipes/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Image Pipes</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Image Pipes</div>
+<h1>Image Pipes</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Gimp 1.1 and the soon to come 1.2 introduce alot of new features, including the ability to use full color "pixmap brushes". 
   In addition, you can also combine single frame pixmap brushes into a "image pipe". A Gimp Image Pipe allows you to spray out 
@@ -16,7 +16,7 @@
   seem difficult. However, for almost all common image pipes it is easy to set them up.
 </p>
 
-<div class="subtitle">Example 1</div>
+<h2>Example 1</h2>
 <p class="images">
   <img src="example1_ss.gif" alt=""/>
 </p>
@@ -69,7 +69,7 @@
   example image above (also making use of the fun gradient brushes).
 </p>
 
-<div class="subtitle">Example 2</div>
+<h2>Example 2</h2>
 <p class="images">
   <img src="example2_ss.gif" alt=""/>
 </p>
@@ -85,7 +85,7 @@
   An example of the use of this image:
 </p>
 
-<div class="subtitle">Example 3</div>
+<h2>Example 3</h2>
 <p class="images">
   <img src="example3_ss.gif" alt=""/>
 </p>
@@ -105,7 +105,7 @@
   You will want to save the image with the values show here:
 </p>
 
-<div class="subtitle">Example 4</div>
+<h2>Example 4</h2>
 <p class="images">
   <img src="example4_ss.gif" alt=""/>
 </p>
@@ -124,7 +124,7 @@
   Example output.
 </p>
 
-<div class="subtitle">Example 5</div>
+<h2>Example 5</h2>
 <p class="images">
   <img src="example_ss5.gif" alt=""/>
 </p>
