--- a/tutorials/Image_Pipes2/index.html
+++ b/tutorials/Image_Pipes2/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Image Pipes 2</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Image Pipes 2</div>
+<h1>Image Pipes 2</h1>
 
-<div class="subtitle">What are image pipe and pixmap brushes?</div>
+<h2>What are image pipe and pixmap brushes?</h2>
 <p>
   A pixmap brush is an image, with both shape and color, that gets drawn with one of the paint tools. The pencil draws the pixmap with a single click. 
   The paintbrush does the same with some extra options. The airbrush allows you to do levels of transparency for the pixmap brush. 
@@ -14,7 +14,7 @@
   An image pipe is a series of pixmap brushes combined into one, so that one or more of the pixmaps from the image pipe is drawn as you click or drag the mouse.
 </p>
 
-<div class="subtitle">How Do You Make a New Brush?</div>
+<h2>How Do You Make a New Brush?</h2>
 <p class="images">
   <img src="fig1.jpg" alt=""/>
 </p>
@@ -47,7 +47,7 @@
   less will mean the pixmaps will overlap. See the examples above.
 </p>
 
-<div class="subtitle">Image Pipe Options</div>
+<h2>Image Pipe Options</h2>
 <p class="images">
   <a href="layer_example.xcf.gz"><img src="fig4.jpg" alt=""/></a>
 </p>
