--- a/tutorials/Lite_Quickies/index.html
+++ b/tutorials/Lite_Quickies/index.html
@@ -2,24 +2,27 @@
 <title>GIMP - GIMPLite Quickies</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">GIMPLite Quickies</div>
+<h1>GIMPLite Quickies</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   So, you have The GIMP installed on your computer, you need to make a quick change to an image for some project, but don't want to learn about 
-  computer graphics right now in order to get the image changed. Totally understandable. The GIMP is a powerful image manipulator with many options and tools. 
-  However, it is quick and somewhat intuitive (after a time) for the small jobs as well. Hopefully, these quickies will help you with your quick problem and help 
+  computer graphics right now in order to get the image changed. Totally understandable. 
+  The GIMP is a powerful image manipulator with many options and tools. 
+  However, it is quick and somewhat intuitive (after a time) for the small jobs as well. 
+  Hopefully, these quickies will help you with your quick problem and help 
   you to stay friends with The GIMP and ready for its more complex tools and methods later, when you have the time and inspiration.
 </p>
 <p>
   A couple of words about the images used here. The came from <a href="http://antwrp.gsfc.nasa.gov/apod/astropix.html">APOD</a>, 
-  Astronomy Picture Ofthe Day. The screenshots were taken on my desktop which is sporting this <a href="http://antwrp.gsfc.nasa.gov/apod/ap020328.html">APOD</a> image.
+  Astronomy Picture Ofthe Day. The screenshots were taken on my desktop which is sporting this 
+  <a href="http://antwrp.gsfc.nasa.gov/apod/ap020328.html">APOD</a> image.
 </p>
 <p>
   All you should need to know to start here is how to find your image and open it. <span class="filter">File-&gt;Open</span>.
 </p>
 
-<div class="subtitle">Change the Size of an Image (Scale)</div>
+<h2>Change the Size of an Image (Scale)</h2>
 <p class="images">
   <a href="scale-menu.png"><img src="scale-menu-t.png" alt=""/></a>
   <a href="scale-dialog.png"><img src="scale-dialog-t.png" alt=""/></a>
@@ -57,7 +60,7 @@
   and height and have it look correct. So only change one and let The GIMP change the rest. To change the other length see the crop quickie.
 </p>
 
-<div class="subtitle">Make jpegs Smaller</div>
+<h2>Make jpegs Smaller</h2>
 <p class="images">
   <a href="jpegsave-menu.png"><img src="jpegsave-menu-t.png" alt=""/></a>
   <a href="jpegsave-dialog-de.png"><img src="jpegsave-dialog-de-t.png" alt=""/></a>
@@ -93,7 +96,7 @@
   but the difference in what you actually see is fairly interesting.
 </p>
 
-<div class="subtitle">Crop An Image</div>
+<h2>Crop An Image</h2>
 <p class="images">
   <a href="crop-menu.png"><img src="crop-menu-t.png" alt=""/></a>
   <a href="crop-dialog.png"><img src="crop-dialog-t.png" alt=""/></a>
@@ -107,7 +110,8 @@
   <a href="ngc6369_heritage_big.jpg">ngc6369 heritage</a>.
 </p>
 <p>
-  I always click on the approximate upper left corner and drag to the lower <a href="crop-drag.png">right corner</a>. You don't need to worry about being accurate 
+  I always click on the approximate upper left corner and drag to the lower <a href="crop-drag.png">right corner</a>. 
+  You don't need to worry about being accurate 
   on this first swipe with the crop tool, since a little dialog will pop up and you can make a better choice for your new borders there..
 </p>
 <p>
@@ -120,10 +124,11 @@
   right after I fixed the width and height and the Y origin, but before the final positoning. The arrows show the move points.
 </p>
 <p>
-  I decided that the image looked the best with the <a href="crop-dialog2.png">X Origin at 39</a>. The final image appears <a href="ngc6369_heritage_sq.jpg">here</a>.
+  I decided that the image looked the best with the <a href="crop-dialog2.png">X Origin at 39</a>. 
+  The final image appears <a href="ngc6369_heritage_sq.jpg">here</a>.
 </p>
 
-<div class="subtitle">Find Info About Your Image</div>
+<h2>Find Info About Your Image</h2>
 <p class="images">
   <a href="info-menu.png"><img src="info-menu-t.png" alt=""/></a>
   <a href="info-dialog.png"><img src="info-dialog-t.png" alt=""/></a>
@@ -158,7 +163,7 @@
   for instance my friend printed images and then scanned them back in. Terrible business!
 </p>
 
-<div class="subtitle">Change the Mode</div>
+<h2>Change the Mode</h2>
 <p class="images">
   <a href="mode-menu.png"><img src="mode-menu-t.png" alt=""/></a>
   <img src="mode-dialog.png" alt=""/>
@@ -209,7 +214,8 @@
 </p>
 <p>
   When you need the person in the photo looking in the other direction, or you need to top of the image to be the bottom. 
-  Mirroring the image (sort of). Right click on the image and follow the menus <span class="filter">&lt;Image&gt;Tools-&gt;Transform Tools-&gt;Flip</span>, 
+  Mirroring the image (sort of). Right click on the image and follow the menus 
+  <span class="filter">&lt;Image&gt;Tools-&gt;Transform Tools-&gt;Flip</span>, 
   or use the button on the toolbox. <img src="flip-button.png" alt=""/>
 </p>
 <p>
@@ -229,14 +235,16 @@
   The flips are all displayed on one page for you, <a href="flips.html">here</a>. One might ask themselves, useful? or filler for a pre-established format?
 </p>
 
-<div class="subtitle">Rotate An Image</div>
+<h2>Rotate An Image</h2>
 <p class="images">
   <a href="rotate-menu.png"><img src="rotate-menu-t.png" alt=""/></a>
 </p>
 <p>
   Let's say you turned your brand new digital camera to get a vertical shot, now some of your images are on their sides. 
-  Right click on the image, and follow the menus <span class="filter">&lt;Image&gt;Image-&gt;Transforms-&gt;Rotate-&gt;90 degrees</span> (or 270 depending on the orientation). 
-  Using an <a href="http://antwrp.gsfc.nasa.gov/apod/ap000228.html">APOD</a> image. I rotated it once to demonstrate. <a href="sombrero_vlt-270.jpg">270 degrees</a>.
+  Right click on the image, and follow the menus <span class="filter">&lt;Image&gt;Image-&gt;Transforms-&gt;Rotate-&gt;90 degrees</span> 
+  (or 270 depending on the orientation). 
+  Using an <a href="http://antwrp.gsfc.nasa.gov/apod/ap000228.html">APOD</a> image. I rotated it once to demonstrate. 
+  <a href="sombrero_vlt-270.jpg">270 degrees</a>.
 </p>
 
 <p>
