--- a/tutorials/Perlotine/index1.html
+++ b/tutorials/Perlotine/index1.html
@@ -2,9 +2,9 @@
 <title>GIMP - Perlotine Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Perlotine Tutorial</div>
+<h1>Perlotine Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   <img src="perlotine1-guides.png" alt=""/>
 </p>
@@ -23,7 +23,7 @@
   Each row needs a different width of columns. It will probably be clearer once we make the slices ....
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p>
   <img src="perlotine1-zoom.png" alt=""/>
 </p>
@@ -36,7 +36,7 @@
   I zoomed in 4 times on my screenshot so I could make neat slices. 
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p>
   <img src="dialog-perlotine.png" alt=""/>
 </p>
@@ -51,7 +51,7 @@
   Sooner or later, you will have to click the "Ok" button for the plug-in to work.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <table cellspacing=0 cellpadding=0>
 <tr>
  <td class="map"><img class="map" alt="" src="imap-table1-0-0.png" width="290" height="73"></td>
