--- a/tutorials/Perlotine/index2.html
+++ b/tutorials/Perlotine/index2.html
@@ -2,8 +2,8 @@
 <title>GIMP - Perlotine Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-  <div class="heading">Perlotine Tutorial</div>
-  <div class="subtitle">Intention</div>
+  <h1>Perlotine Tutorial</h1>
+  <h2>Intention</h2>
   <p style="text-justify: align;">
     <img src="perlotine1-guides.png" alt="" style="float: left; margin-right: 1em;" />
       I made a pretty neat image map for my web site. These three tutorials demonstrate some of The GIMPs html 
@@ -20,7 +20,7 @@
     Each row needs a different width of columns. It will probably be clearer once we make the slices ....
   </p>
 
-  <div class="subtitle" style="padding-top: 2em;">Step 1</div>
+  <h2 style="padding-top: 2em;">Step 1</h2>
   <p>
       Perl-O-Tine is a plug-in that slices an image along guides that you have placed and writes the html table that will put 
       it back together again on a web page. If you are using The GIMP after experience with Photoshop LE, 
@@ -34,7 +34,7 @@
     Once you have the guides in place, you can find the plug-in under <span class="filter">&lt;Image&gt;Filter-&gt;Web-&gt;Perlotine</span>.
   </p>
   
-  <div class="subtitle" style="padding-top: 2em;">Step 2</div>
+  <h2 style="padding-top: 2em;">Step 2</h2>
   <p>
     <img src="dialog-perlotine.png" alt="" style="float: left; margin-right: 1em;" />
       "Save path:" tells The GIMP where to put the slices. "Html file name:" names the perlotine html. 
@@ -44,7 +44,7 @@
       Sooner or later, you will have to click the "Ok" button for the plug-in to work.
   </p>
   
-  <div class="subtitle" style="padding-top: 2em;">Step 3</div>
+  <h2 style="padding-top: 2em;">Step 3</h2>
   <table cellspacing="0" cellpadding="0" style="float: left; margin-right: 1em; margin-left: 40px;"><tbody>
       <tr><td class="map"><img class="map" alt="" src="imap-table1-0-0.png" width="290" height="73" /></td></tr>
       <tr><td class="map"><img class="map" alt="" src="imap-table1-1-0.png" width="290" height="177" /></td></tr>
