--- a/tutorials/Perlotine/nested.html
+++ b/tutorials/Perlotine/nested.html
@@ -1,55 +1,55 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Nested GIMP Perlotine Tables</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
-<div class="heading">Nested GIMP Perlotine Tables</div>
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
+<h1>Nested GIMP Perlotine Tables</h1>
 
-<table cellspacing=0 cellpadding=0 border=0>
+<table cellspacing="0" cellpadding="0" border="0">
   <tr>
-    <td><img alt=" " src="imap-table1-0-0.png" width="290" height="73"></td>
+    <td><img alt=" " src="imap-table1-0-0.png" width="290" height="73"/></td>
   </tr>
   <tr>
-    <td><img alt=" " src="imap-table1-1-0.png" width="290" height="177"></td>
+    <td><img alt=" " src="imap-table1-1-0.png" width="290" height="177"/></td>
   </tr>
   <tr>
-    <td><img alt=" " src="imap-table1-2-0.png" width="290" height="17"></td>
+    <td><img alt=" " src="imap-table1-2-0.png" width="290" height="17"/></td>
   </tr>
   <tr>
-    <td><table cellspacing=0 cellpadding=0 border=0>
+    <td><table cellspacing="0" cellpadding="0" border="0">
     <tr>
-      <td><img alt=" " src="imap-table1-3-0-0.png" width="10" height="21"></td>
-      <td><img alt=" " src="imap-table1-3-0-1.png" width="219" height="21"></td>
-      <td><img alt=" " src="imap-table1-3-0-2.png" width="61" height="21"></td>
+      <td><img alt=" " src="imap-table1-3-0-0.png" width="10" height="21"/></td>
+      <td><img alt=" " src="imap-table1-3-0-1.png" width="219" height="21"/></td>
+      <td><img alt=" " src="imap-table1-3-0-2.png" width="61" height="21"/></td>
     </tr>
     </table></td>
   </tr>
   <tr>
-    <td><img alt=" " src="imap-table1-4-0.png" width="290" height="50"></td>
+    <td><img alt=" " src="imap-table1-4-0.png" width="290" height="50"/></td>
   </tr>
 </table>
 
 <pre class="code">
 &lt;table cellspacing=0 cellpadding=0 border=0&gt;
         &lt;tr&gt;
-                &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-0-0.png&quot; width=&quot;290&quot; height=&quot;73&quot;/&gt;&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
-                &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-1-0.png&quot; width=&quot;290&quot; height=&quot;177&quot;&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-1-0.png&quot; width=&quot;290&quot; height=&quot;177&quot;/&gt;&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
-                &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-2-0.png&quot; width=&quot;290&quot; height=&quot;17&quot;&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-2-0.png&quot; width=&quot;290&quot; height=&quot;17&quot;/&gt;&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
-                &lt;td&gt;&lt;table cellspacing=0 cellpadding=0 border=0&gt;
-                &lt;tr&gt;
-                        &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-0.png&quot; width=&quot;10&quot; height=&quot;21&quot;&gt;&lt;/td&gt;
-                        &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-1.png&quot; width=&quot;219&quot; height=&quot;21&quot;&gt;&lt;/td&gt;
-                        &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-2.png&quot; width=&quot;61&quot; height=&quot;21&quot;&gt;&lt;/td&gt;
-                &lt;/tr&gt;
-           &lt;/table&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;table cellspacing=0 cellpadding=0 border=0&gt;
+          &lt;tr&gt;
+              &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-0.png&quot; width=&quot;10&quot; height=&quot;21&quot;/&gt;&lt;/td&gt;
+              &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-1.png&quot; width=&quot;219&quot; height=&quot;21&quot;/&gt;&lt;/td&gt;
+              &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-3-0-2.png&quot; width=&quot;61&quot; height=&quot;21&quot;/&gt;&lt;/td&gt;
+           &lt;/tr&gt;
+         &lt;/table&gt;&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
-                &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-4-0.png&quot; width=&quot;290&quot; height=&quot;50&quot;&gt;&lt;/td&gt;
+          &lt;td&gt;&lt;img alt=&quot; &quot; src=&quot;imap-table1-4-0.png&quot; width=&quot;290&quot; height=&quot;50&quot;/&gt;&lt;/td&gt;
         &lt;/tr&gt;
 &lt;/table&gt;
 </pre>
@@ -58,8 +58,7 @@
   The original tutorial can be found <a href="http://carol.gimp.org/mygimp/tutorials/">here</a>.
 </p>
 
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:carol@gimp.org">Carol Spears (carol)</a>
@@ -68,6 +67,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
