--- a/tutorials/Photo_To_Sketch/index.html
+++ b/tutorials/Photo_To_Sketch/index.html
@@ -2,14 +2,14 @@
 <title>GIMP - Photo to sketch</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Photo to sketch</div>
+<h1>Photo to sketch</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Tutorial on how to make a nice baby &amp; daddy photo into a nice baby &amp; daddy painting.
 </p>
 
-<div class="subtitle">1. Original image</div>
+<h2>1. Original image</h2>
 <p class="images">
   <img src="original.jpeg" alt=""/>
 </p>
@@ -17,7 +17,7 @@
   Nice picture of a baby &amp; dad. Ah.
 </p>
 
-<div class="subtitle">2. After a Sobel edge detect</div>
+<h2>2. After a Sobel edge detect</h2>
 <p class="images">
   <img src="sobel.jpeg" alt=""/>
 </p>
@@ -25,7 +25,7 @@
   Straightforward Sobel edge detect (<span class="filter">&lt;Image&gt;Filters-&gt;Edge-&gt;Detect/Sobel</span>) of original (don't forget to save a copy of the original)
 </p>
 
-<div class="subtitle">3. Equalised &amp; desaturated Sobel</div>
+<h2>3. Equalised &amp; desaturated Sobel</h2>
 <p class="images">
   <img src="equalised_sobel.jpeg" alt=""/>
 </p>
@@ -34,7 +34,7 @@
   and convert it to greys using desaturate (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span>).
 </p>
 
-<div class="subtitle">4. Curves window for how to do a highpass filter</div>
+<h2>4. Curves window for how to do a highpass filter</h2>
 <p class="images">
   <img src="highpass.png" alt=""/>
 </p>
@@ -47,7 +47,7 @@
   Just drag the mouse/pen along the bottom of the curves tool.
 </p>
 
-<div class="subtitle">5. Image after the highpass</div>
+<h2>5. Image after the highpass</h2>
 <p class="images">
   <img src="after_highpass.jpeg" alt=""/>
 </p>
@@ -55,7 +55,7 @@
   The result is much cleaner. The only problem is it's white-on-black, when we want black-on-transparent ideally.
 </p>
 
-<div class="subtitle">6. L&amp;C dialog for creating an edges mask</div>
+<h2>6. L&amp;C dialog for creating an edges mask</h2>
 <p class="images">
   <img src="edges.jpeg" alt=""/>
 </p>
@@ -68,7 +68,7 @@
   in the highpass filtered layer, this means that we end up with a rather nice black-on-transparent layer.
 </p>
 
-<div class="subtitle">7. Save of the image above to show effect</div>
+<h2>7. Save of the image above to show effect</h2>
 <p class="images">
   <img src="photo_edges.jpeg" alt=""/>
 </p>
@@ -77,7 +77,7 @@
   For the colouring, we need some more work (mostly slogging, though).
 </p>
 
-<div class="subtitle">8. L&amp;C dialog with set-up for the colouring trick</div>
+<h2>8. L&amp;C dialog with set-up for the colouring trick</h2>
 <p class="images">
   <img src="colour_trick.png" alt=""/>
 </p>
@@ -90,7 +90,7 @@
   or are in the middle of an area that's more or less the same colour.
 </p>
 
-<div class="subtitle">9. Colouring looks after doing one area of the image</div>
+<h2>9. Colouring looks after doing one area of the image</h2>
 <p class="images">
   <img src="starting_colouring.jpeg" alt=""/>
 </p>
@@ -101,7 +101,7 @@
   (doesn't have to be perfect). You should see the colour darkening as we draw with a colour similar to the background colour.
 </p>
 
-<div class="subtitle">10. Colouring layer in normal mode</div>
+<h2>10. Colouring layer in normal mode</h2>
 <p class="images">
   <img src="viewing_colouring.jpeg" alt=""/>
 </p>
@@ -109,7 +109,7 @@
   This is what we see if we set the colour drawing layer to normal mode. And we're on our way.
 </p>
 
-<div class="subtitle">11. Finished with a completed colour layer</div>
+<h2>11. Finished with a completed colour layer</h2>
 <p class="images">
   <img src="pencil_and_paint_sketch.jpeg" alt=""/>
 </p>
