--- a/tutorials/Quickmask/index.html
+++ b/tutorials/Quickmask/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Quickmask Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Quickmask Tutorial</div>
+<h1>Quickmask Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="blur-15.jpg" alt=""/>
 </p>
@@ -15,7 +15,7 @@
   to show how you can use it to create quick and easy vignette effects.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="image.1.jpg" alt=""/>
 </p>
@@ -24,7 +24,7 @@
   GIMP 1.1.7, a development version of GIMP, introduced QuickMask. The QuickMask control buttons are located at the lower-left side of the image.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="image.2.jpg" alt=""/>
 </p>
@@ -32,7 +32,7 @@
   First, make a rectangular selection around the edge of the image. Then click on the red-bordered QuickMask icon in the lower-left corner of your image.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="image.3.jpg" alt=""/>
 </p>
@@ -44,7 +44,7 @@
   and watch what happens to the mask.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="image.4.jpg" alt=""/>
 </p>
@@ -52,7 +52,7 @@
   The mask gets all wavy. Let's add one more effect: <span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Gaussian Blur (RLE)</span>.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="image.5.jpg" alt=""/>
 </p>
@@ -60,7 +60,7 @@
   Now that there is a soft edge on the mask, click the dashed QuickMask button to convert the mask back into a selection. 
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="image.6.jpg" alt=""/>
 </p>
@@ -70,7 +70,7 @@
   <span class="filter">&lt;Image&gt;Edit-&gt;Fill</span>. The result, a soft white fade into the background, is shown in the final step.
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="image.7.jpg" alt=""/>
 </p>
@@ -78,7 +78,7 @@
   And there you have it. Some more examples are listed below. Happy GIMPing!
 </p>
 
-<div class="subtitle">Examples</div>
+<h2>Examples</h2>
 <p class="images">
   <img src="spread-11.png" alt=""/>
 </p>
