--- a/tutorials/Red_Eye_Removal/index.html
+++ b/tutorials/Red_Eye_Removal/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Red Eye Removal</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Red Eye Removal</div>
+<h1>Red Eye Removal</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
    It used to be that the photos with red eye weren't really worth fixing as only cheesy cameras had the flash built in 
    and underneath the red eyes was a crappy photo. Well, welcome to the future when you can get a pretty good image from
@@ -15,7 +15,7 @@
    lurking on the irc late late one night.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="zoom1.png" alt=""/>
 </p>
@@ -25,7 +25,7 @@
    didn't work fast enough. As always, you can <span class="filter">&lt;Image&gt;Edit-&gt;Undo</span> until you make the right selections.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="dialog-channels-sm.png" alt=""/>
 </p>
@@ -38,7 +38,7 @@
    (burning the red eye area will not work if the Layers,Channels and Paths dialog is set up that way, I happen to know).
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="burnopts-sm.png" alt=""/>
 </p>
@@ -54,7 +54,7 @@
    to a smaller percentage. <span class="filter">&lt;Image&gt;Edit-&gt;Undo</span> until you get it right.
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="zoom2.png" alt=""/>
 </p>
