--- a/tutorials/Selective_Color/index.html
+++ b/tutorials/Selective_Color/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Selective Colorization</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Selective Colorization</div>
+<h1>Selective Colorization</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="before.jpg" alt=""/>
   <img src="after.jpg" alt=""/>
@@ -23,7 +23,7 @@
   <a href="http://www.photo.net/digital/editing/hand-coloring">a "hand-coloring" tutorial on photo.net</a> (great web site by the way, I recommend it).
 </p>
 
-<div class="subtitle">The Procedure</div>
+<h2>The Procedure</h2>
 <p class="images">
   <img src="original.jpg" alt=""/>
 </p>
@@ -31,7 +31,7 @@
   Here is the original example image, loaded into The GIMP.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="image2.jpg" alt=""/>
 </p>
@@ -45,7 +45,7 @@
   a simple conversion to grayscale (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>), then back to RGB.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="layers1.jpg" alt=""/>
   <img src="newlayeroptions.jpg" alt=""/>
@@ -59,7 +59,7 @@
   Make sure the new layer is selected in the layers dialog.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="layers3.jpg" alt=""/>
   <img src="layers4.jpg" alt=""/>
@@ -73,7 +73,7 @@
   You can close the B&amp;W image window you just copied from now, if you want.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="addmaskoptions.jpg" alt=""/>
   <img src="layers5.jpg" alt=""/>
@@ -82,7 +82,7 @@
   In the Layers dialog, right-click on the B&amp;W layer and select "Add Layer Mask". In the Add Mask Options dialog, select White (Full Opacity).
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="toolbox.jpg" alt=""/>
   <img src="brushes1.jpg" alt=""/>
@@ -95,7 +95,7 @@
   In the toolbox, select the paint tool (<img src="paint.jpg" alt=""/>). Begin painting the interior of the parts you want to be in color.
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="image4.jpg" alt=""/>
 </p>
@@ -103,7 +103,7 @@
   When you get to the edges of the colored part, zoom in to make life easier.
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="brushes2.jpg" alt=""/>
   <img src="image5.jpg" alt=""/>
@@ -115,7 +115,7 @@
   If for some reason you can't undo, don't worry: just switch to white paint and paint opacity back over your mistake to repair the mask.
 </p>
 
-<div class="subtitle">Final Step</div>
+<h2>Final Step</h2>
 <p class="images">
   <img src="final.jpg" alt=""/>
 </p>
@@ -123,7 +123,7 @@
   When your all done, go over the colored part carefully to see if there are any gray (opaque) specks that you missed. Then zoom out and have a look. Voila!
 </p>
 
-<div class="subtitle">Tips</div>
+<h2>Tips</h2>
 <p class="images">
   <img src="tablet.jpg" alt=""/>
 </p>
@@ -136,13 +136,13 @@
   You probably want to do this before you create the B&amp;W copy.</li>
 </ul>
 
-<div class="subtitle">Other Examples</div>
+<h2>Other Examples</h2>
 <p class="images">
   <img src="example3.jpg" alt=""/>
   <img src="example2.jpg" alt=""/>
 </p>
 
-<div class="subtitle">Further Reading</div>
+<h2>Further Reading</h2>
 <ul>
   <li><a href="http://www.photo.net/digital/editing/hand-coloring">a "hand-coloring" tutorial on photo.net</a></li>
 </ul>
