--- a/tutorials/Selective_Gaussian_Blur/index.html
+++ b/tutorials/Selective_Gaussian_Blur/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Noise removal with selective Gaussian blur</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Noise removal with selective Gaussian blur</div>
+<h1>Noise removal with selective Gaussian blur</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Digital cameras often have quite some noise in their pictures. Some are worse than others, but it's there. Here I'll show you a way 
   to get rid of that noise using the selective Gaussian blur filter.
@@ -14,7 +14,7 @@
   You could think of it like the opposite of unsharpen mask (that sharpens everything with contrast above a certain threshold.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="01.png" alt=""/>
   <img src="02.jpg" alt=""/>
@@ -31,7 +31,7 @@
   For best results, this should a part where there's some noise you want to remove and some detail you want to preserve.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="05.jpg" alt=""/>
 </p>
@@ -78,7 +78,7 @@
   and I'm still not finished developing that feel. In any case, it's good to know that the first things that start to look funny are often faces and hair.
 </p>
 
-<div class="subtitle">The result</div>
+<h2>The result</h2>
 <p class="images">
   <img src="org_sm.jpg" alt=""/>
 </p>
@@ -94,7 +94,7 @@
   <b>Last image</b>: After (blur radius:8, maximum delta:7).
 </p>
 
-<div class="subtitle">Files</div>
+<h2>Files</h2>
 <p>
   <a href="before.jpg">Before, 1280x960, JPEG (120 Kb)</a><br />
   <a href="after.jpg">After, 1280x960, JPEG (104 Kb)</a>
