--- a/tutorials/Sepia_Toning/index.html
+++ b/tutorials/Sepia_Toning/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Sepia Toning</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Sepia Toning</div>
+<h1>Sepia Toning</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="before.jpg" alt=""/>
   <img src="after.jpg" alt=""/>
@@ -23,7 +23,7 @@
   <a href="http://www.retouchpro.com/tutorials/lum-mask-sepia.html">a Photoshop tutorial on the RetouchPRO web site</a>.
 </p>
 
-<div class="subtitle">The Procedure</div>
+<h2>The Procedure</h2>
 <p class="images">
   <img src="original.jpg" alt=""/>
 </p>
@@ -31,7 +31,7 @@
   Here is the original image, loaded into the GIMP. It has a bit of an old-time look, so I thought it might work well as a sepia-toned image.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="decor.jpg" alt=""/>
   <img src="image-wdecorfu.jpg" alt=""/>
@@ -43,7 +43,7 @@
   Come back and compare to this when you get to the end of the tutorial.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="image2.jpg" alt=""/>
 </p>
@@ -59,7 +59,7 @@
   In this case I simply did a mode change to grayscale, then back to RGB mode.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="colorselection.jpg" alt=""/>
   <img src="toolbox2.jpg" alt=""/>
@@ -69,7 +69,7 @@
   (you can experiment with this color too; this is a good starting point though.)
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="layers1.jpg" alt=""/>
   <img src="newlayeroptions.jpg" alt=""/>
@@ -81,7 +81,7 @@
   You should see nothing but the color now in the image window, since it obscures the image in the layer below. We are going to selectively apply this color to the image.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="addmaskoptions.jpg" alt=""/>
   <img src="layers3.jpg" alt=""/>
@@ -90,7 +90,7 @@
   Right-click on the Sepia Mask layer and select Add Layer Mask. In the Add Mask Options dialog, choose White (Full Opacity).
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="layers4.jpg" alt=""/>
   <img src="image3.jpg" alt=""/>
@@ -100,7 +100,7 @@
   click on the layer mask icon in the Sepia Mask layer (the little white square). Then go back up to the image window and paste (<kbd>Ctrl+V</kbd>)
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="layers5.jpg" alt=""/>
   <img src="image4.jpg" alt=""/>
@@ -113,7 +113,7 @@
   the mid-tones a little less, and the highlights little to none, much the way a print sepia-toned the traditional way would be.
 </p>
 
-<div class="subtitle">Step 8</div>
+<h2>Step 8</h2>
 <p class="images">
   <img src="layers6.jpg" alt=""/>
   <img src="image5.jpg" alt=""/>
@@ -124,7 +124,7 @@
   You now have your base result. It might be a good idea to save this under a new name at this point.
 </p>
 
-<div class="subtitle">Step 9</div>
+<h2>Step 9</h2>
 <p class="images">
   <img src="curves.jpg" alt=""/>
   <img src="image-curves.jpg" alt=""/>
@@ -148,7 +148,7 @@
   Here I decided that the image was a little flat and so I punched up the contrast using curves.
 </p>
 
-<div class="subtitle">Step 10</div>
+<h2>Step 10</h2>
 <p class="images">
   <img src="decor2.jpg" alt=""/>
   <img src="final.jpg" alt=""/>
@@ -157,7 +157,7 @@
   As a final touch, I ran the "Old Photo" Script-Fu without the "sepia" and "mottle" options. Here is the final image.
 </p>
 
-<div class="subtitle">Tips and Tweaks</div>
+<h2>Tips and Tweaks</h2>
 <ul>
   <li>You can reduce the effect of the sepia toning by adjusting the opacity of the Sepia Mask layer.</li>
   <li>Try adding some grain or noise to the image (probably before you desaturate).</li>
@@ -176,7 +176,7 @@
   For this particular image, I prefer the smoother tonality and darker contrast of the left-hand image.
 </p>
 
-<div class="subtitle">Further Reading on Sepia Toning</div>
+<h2>Further Reading on Sepia Toning</h2>
 <ul>
   <li>Doing this same process with Photoshop (<a href="http://www.retouchpro.com/tutorials/lum-mask-sepia.html">Part I</a>, 
   <a href="http://www.retouchpro.com/tutorials/lum-mask-sepia2.html">Part II</a>)</li>
