--- a/tutorials/Simple_Animations/index.html
+++ b/tutorials/Simple_Animations/index.html
@@ -2,16 +2,16 @@
 <title>GIMP - Simple Animations</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Simple Animations</div>
+<h1>Simple Animations</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   In this tutorial, you'll learn how to use GIMP's layers in a different manner. Unlike it's default composite function, 
   using GIMP as an animation package requires you to think of every layer as of an animation frame. We'll discuss the two 
   different frame disposal methods later on. For now let us think about every layer as of a separate frame. 
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="flower.png" alt=""/>
   <img src="flower-layers.png" alt=""/>
@@ -33,7 +33,7 @@
   <span class="filter">&lt;image&gt;Layers-&gt;Flatten Image</span>. 
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="flower-text.png" alt=""/>
 </p>
@@ -49,7 +49,7 @@
   That way you can position the newly created text acording to the text below (on the previous frame).
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="flower-anim.png" alt=""/>
 </p>
@@ -62,7 +62,7 @@
   You can even drag the preview around your desktop.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="selection.png" alt=""/>
   <img src="apply-var.png" alt=""/>
@@ -81,7 +81,7 @@
   All we need to do now is to drag the layers back to the original image.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="saveas.png" alt=""/>
 </p>
