--- a/tutorials/Smart_Sharpening/shortcuts.html
+++ b/tutorials/Smart_Sharpening/shortcuts.html
@@ -2,18 +2,18 @@
 <title>GIMP - "Smart" Sharpening Shortcuts</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">"Smart" Sharpening Shortcuts</div>
+<h1>"Smart" Sharpening Shortcuts</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Maybe you think the smart sharpening method is too complicated, or too lengthy, or just not worth it for the benefit. There are many variations on this technique, 
   some of which are not as lengthy as the "full" technique, but may still produce better results than a straightforward unsharp mask operation.
 </p>
 
-<div class="subtitle">Possible combinations</div>
+<h2>Possible combinations</h2>
 <ol>
   <li>Decompose into LAB, and prepare a sharpening mask. Only the edges in the luminosity channel are sharpened. This is the full procedure described in the tutorial.</li>
   <li>Decompose into HSV, and prepare a sharpening mask. Only the edges in the value channel are sharpened. A variation on the full procedure described in the tutorial.</li>
@@ -31,7 +31,7 @@
   <li>Sharpen the entire image, all RGB channels.</li>
 </ol>
 
-<div class="subtitle">Results</div>
+<h2>Results</h2>
 <p>
   Compare for yourself!
   <br />
