--- a/tutorials/Smart_Sharpening/warp-sharp.html
+++ b/tutorials/Smart_Sharpening/warp-sharp.html
@@ -2,12 +2,12 @@
 <title>GIMP - "Warp" Sharpening</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">"Warp" Sharpening</div>
+<h1>"Warp" Sharpening</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Thanks to Branko Collin for bringing to my attention <a href="http://www.home.unix-ag.org/simon/gimp/warp-sharp.html">Simon Budig's "warp sharp" script</a>. 
   This is a Script-Fu script that you can put in your GIMP folder and run straight from the GIMP. This is a very impressive script and a nice tool to have in your GIMP toolbox.
@@ -17,7 +17,7 @@
   Here are the results:
 </p>
 
-<div class="subtitle">First image</div>
+<h2>First image</h2>
 <p class="images">
   <img src="example1-original-zoomed100.jpg" alt=""/>
 </p>
@@ -132,7 +132,7 @@
   Compare the catchlights and the iris/chin/cheek edges.
 </p>
 
-<div class="subtitle">Discussion</div>
+<h2>Discussion</h2>
 <p>
   Obviously this is a very preliminary and cursory examination, and further experimentation with the warp sharp script parameters is necessary before making any substantive 
   judgements about the quality of warp sharping. What follows are my first impressions only.
@@ -157,13 +157,13 @@
   </li>
 </ol>
 
-<div class="subtitle">Conclusion</div>
+<h2>Conclusion</h2>
 <p>
   More experimentation is necessary! For now, I am convinced that the warp sharpen script is a useful addition to the GIMP toolbox. 
   Certainly as a convenience sharpening option it is unmatched: just run the script.
 </p>
 
-<div class="subtitle">Getting the warp-sharp script</div>
+<h2>Getting the warp-sharp script</h2>
 <p>
   Here is a <a href="http://www.home.unix-ag.org/simon/gimp/warp-sharp.html">link to the script authors site</a>. Download the script and put it into your .gimp-1.2/scripts folder. 
   Restart the GIMP and you should see warp sharpen as an option off of the "Alchemy" script-fu menu.
