--- a/tutorials/Straight_Line/index.html
+++ b/tutorials/Straight_Line/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Straight Line Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Straight Line Tutorial</div>
+<h1>Straight Line Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="straight_line_example.png" alt=""/>
 </p>
@@ -15,7 +15,7 @@
   This tutorial doesn't use Straight Lines for complex tasks; its intended to show how you can use it to create quick and easy line effects.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="shiftkey.png" alt=""/>
   <img src="mouse.png" alt=""/>
@@ -28,7 +28,7 @@
   but always have at least one button located on them. They are located on your desk, or sometimes on a mouse pad.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="blankimage.png" alt=""/>
 </p>
@@ -36,7 +36,7 @@
   First, create a new image. Any size will do.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="toolbox.png" alt=""/>
 </p>
@@ -44,7 +44,7 @@
   Then click on the paintbrush. Any of the red-highlighted tools on the above toolbox can do lines.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="startdot.png" alt=""/>
 </p>
@@ -55,7 +55,7 @@
   Now, lets start drawing a line. Hold down the Shift button, and keep it down.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="draggedline.png" alt=""/>
 </p>
@@ -67,7 +67,7 @@
   Mouse button, you need to keep the Shift Key held down.
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="drawnline.png" alt=""/>
 </p>
@@ -83,7 +83,7 @@
   Seth 
 </p>
 
-<div class="subtitle">Examples</div>
+<h2>Examples</h2>
 <p class="images">
   <img src="exp1.png" alt=""/>
 </p>
