--- a/tutorials/The_Basics/index.html
+++ b/tutorials/The_Basics/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - The Basics Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">The Basics Tutorial</div>
+<h1>The Basics Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   On this page, the first section of our ever growing (?) collection of tutorials, 
   I will demonstrate the basic operation you will need to perform over and over again in your life as a computer artist: 
@@ -14,7 +14,7 @@
   Start with a plain white picture, black as the foreground color and open the layer dialog!
 </p>
 
-<div class="subtitle">Adding text</div>
+<h2>Adding text</h2>
 <p class="images">
   <img src="tut-basic-1.gif" alt=""/>
 </p>
@@ -28,7 +28,7 @@
   will achieve something like the picture above.
 </p>
 
-<div class="subtitle">Adding colors</div>
+<h2>Adding colors</h2>
 <p class="images">
   <img src="tut-basic-2.gif" alt=""/>
   <img src="tut-basic-3.gif" alt=""/>
@@ -46,7 +46,7 @@
   <img src="tut-basic-dia-1.gif" alt=""/>
 </p>
 
-<div class="subtitle">Bumpmapping</div>
+<h2>Bumpmapping</h2>
 <p class="images">
   <img src="tut-basic-4.gif" alt=""/>
 </p>
@@ -63,7 +63,7 @@
   You can toggle whether a layers mask or the actual picture is active by clicking on their previews in the layers dialog.
 </p>
 
-<div class="subtitle">Using the layer mask</div>
+<h2>Using the layer mask</h2>
 <p class="images">
   <img src="tut-basic-5.gif" alt=""/>
 </p>
@@ -84,7 +84,7 @@
   <img src="tut-basic-dia-4.gif" alt=""/>
 </p>
 
-<div class="subtitle">Adjusting the levels</div>
+<h2>Adjusting the levels</h2>
 <p class="images">
   <img src="tut-basic-6.gif" alt=""/>
 </p>
@@ -111,7 +111,7 @@
   (with smooth transitions realized by values of grey).
 </p>
 
-<div class="subtitle">Creating a drop-shadow</div>
+<h2>Creating a drop-shadow</h2>
 <p class="images">
   <img src="tut-basic-7.gif" alt=""/>
 </p>
