--- a/tutorials/Tileable_Textures/index.html
+++ b/tutorials/Tileable_Textures/index.html
@@ -2,16 +2,16 @@
 <title>GIMP - Tileable Textures</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Tilable Textures</div>
+<h1>Tilable Textures</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   The 1.1 series and the hopefully soon to arrive 1.2 series have a nice new feature I refer to as gradient brushes. 
   Essentially, this is just the regular paint tool, but instead of painting with a constant color, it gets its color
   from a gradient and rotates thought the gradient as you paint.
 </p>
 
-<div class="subtitle">Using Gradient Brushes</div>
+<h2>Using Gradient Brushes</h2>
 <p class="images">
   <img src="grad_brush_dialog.gif" alt=""/>
 </p>
@@ -76,7 +76,7 @@
   Offset that image one more time (or not,actually...), and your ready to go. 
 </p>
 
-<div class="subtitle">Things to tweak</div>
+<h2>Things to tweak</h2>
 <p>
   Of course changing the gradient type, and the brush will have a big effect on the look of the texture, but so will more subtle things like 
   the opacity of the brush, and the paint mode can make for some interesting effects. These type of textures also seem to work well for layering 
@@ -85,7 +85,7 @@
   All in all, this is nice and simple, and fast way to create some colorful textures.
 </p>
 
-<div class="subtitle">Examples</div>
+<h2>Examples</h2>
 <p class="images">
   <img src="texture1.jpg" alt=""/>
   <img src="texture2.jpg" alt=""/>
