--- a/tutorials/Lite_Quickies/jpegrace.html
+++ b/tutorials/Lite_Quickies/jpegrace.html
@@ -2,7 +2,7 @@
 <title>GIMP - jpeg race</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">jpeg race</div>
+<h1>jpeg race</h1>
 
 <table>
       <tr><td>
