--- a/tutorials/Perlotine/index.html
+++ b/tutorials/Perlotine/index.html
@@ -1,10 +1,10 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
 <title>GIMP - Perlotine Tutorial</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
-<div id="main">
-<div class="heading">Perlotine Tutorial</div>
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
+<h1>Perlotine Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   <img src="perlotine1-guides.png" alt=""/>
 </p>
@@ -23,7 +23,7 @@
   Each row needs a different width of columns. It will probably be clearer once we make the slices ....
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p>
   <img src="perlotine1-zoom.png" alt=""/>
 </p>
@@ -36,7 +36,7 @@
   I zoomed in 4 times on my screenshot so I could make neat slices. 
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p>
   <img src="dialog-perlotine.png" alt=""/>
 </p>
@@ -51,7 +51,7 @@
   Sooner or later, you will have to click the "Ok" button for the plug-in to work.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <table cellspacing=0 cellpadding=0>
 <tr>
  <td class="map"><img class="map" alt="" src="imap-table1-0-0.png" width="290" height="73"></td>
@@ -134,7 +134,8 @@
 </p>
 <p>
   There are two ways to add the new table. I chose the more difficult of the two, as I am using css and css doesn't seem to like nested tables. 
-  So I made the previous elements span 3 columns. If you don't know how to tweak html like this, you can just nest them like I did <a href="nested.html">here</a>.
+  So I made the previous elements span 3 columns. If you don't know how to tweak html like this, 
+  you can just nest them like I did <a href="nested.html">here</a>.
 </p>
 <p>
   I am making all of the rest of the cuts in one step now. First the tweaked code for this table and then the completely chopped up table, 
@@ -291,8 +292,7 @@
   The original tutorial can be found <a href="http://carol.gimp.org/mygimp/tutorials/">here</a>.
 </p>
 
-</div>
-<!--#include virtual="/includes/tutnavbar.inc" -->
+<!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
         Tutorial &copy; 2002 <a href="mailto:carol@gimp.org">Carol Spears (carol)</a>
@@ -301,6 +301,4 @@
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-
-  </body>
-</html>
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
