--- a/tutorials/Reducing_CCD_Noise/index.html
+++ b/tutorials/Reducing_CCD_Noise/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Reducing CCD Noise</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Reducing CCD Noise</div>
+<h1>Reducing CCD Noise</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="before.jpg" alt=""/>
   <img src="after.jpg" alt=""/>
@@ -20,13 +20,13 @@
   If you find it necessary to shoot with a higher ISO and you find that you have an unpleasant amount of noise in your image, this tutorial will help you improve the image.
 </p>
 
-<div class="subtitle">The Procedure</div>
+<h2>The Procedure</h2>
 <p>
   One procedure that works reasonably well is to apply the Despeckle filter. Unfortunately, this filter will soften the image. 
   Fortunately, you can get sharpen the image to partially offset this.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="image-original.jpg" alt=""/>
   <img src="image-original-zoom100.jpg" alt=""/>
@@ -35,7 +35,7 @@
   Here is the original image. Notice how bad the noise is, especially in the shadows of the face and in the white wall (back right).
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="despeckle.jpg" alt=""/>
   <img src="image-despeckled-zoom100.jpg" alt=""/>
@@ -53,7 +53,7 @@
   Fortunately we can offset this to some degree by sharpening.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="image-final-zoom100.jpg" alt=""/>
 </p>
@@ -64,7 +64,7 @@
   just apply a little global sharpening to offset the softening.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="image-final.jpg" alt=""/>
   <img src="image-original.jpg" alt=""/>
@@ -73,7 +73,7 @@
   Zoomed out (upper left). Compare to the original (upper right) Look at the arm and the white wall in back right. Much better.
 </p>
 
-<div class="subtitle">Tips and Suggestions</div>
+<h2>Tips and Suggestions</h2>
 <ul>
   <li>It may not be necessary to apply the despeckle filter across all RGB channels; as I mentioned earlier, CCD noise tends to show up predominantly in the blue or red channels. 
   You can open the Layers dialog (<kbd>Ctrl+L</kbd>), click on the Channels tab and just select the channel(s) that you want to apply the filter to. 
@@ -88,13 +88,13 @@
   </li>
 </ul>
 
-<div class="subtitle">Other Examples</div>
+<h2>Other Examples</h2>
 <p class="images">
   <img src="example2-before.jpg" alt=""/>
   <img src="example2-after.jpg" alt=""/>
 </p>
 
-<div class="subtitle">Further Reading on Reducing CCD Noise</div>
+<h2>Further Reading on Reducing CCD Noise</h2>
 <ul>
   <li><a href="http://www.2morrow.dk/75ppi/coolpix/actions/">Actions for Photoshop 6 for reducing CCD noise.</a></li>
 </ul>
